k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shinyproxy-server
  namespace: shinyproxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shinyproxy-server
  template:
    metadata:
      labels:
        app: shinyproxy-server
    spec:
      containers:
      - name: shinyproxy-server
        image: registry.digitalocean.com/theia-1in1000-shinyapps/shinyproxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080   
      affinity: 
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: doks.digitalocean.com/node-pool
                operator: In
                values:
                - shinyproxy-pool
---
apiVersion: v1
kind: Service
metadata:
  name: shinyproxy-server
  namespace: shinyproxy
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 
      targetPort: 8080 
  selector:
    app: shinyproxy-server 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shinyproxy-ingress
  namespace: shinyproxy
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    kubernetes.io/ingress.class: "nginx" 
spec:
  tls: 
  - hosts:
    - "apps.1in1000.com"
    secretName: shinyproxy-tls  # Cert-manager will store the issued cert here
  rules:
  - host: "apps.1in1000.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shinyproxy-server
            port:
              number: 80
